--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -138,3 +138,13 @@ footer.footer {
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
+
+.error {
+    border-color: #dc3545;
+    box-shadow: 0 0 0 .2rem rgba(220, 53, 69, .25);
+}
+
+.error-text {
+    color: #dc3545;
+    font-weight: bold;
+}
